--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ authors = ["twitchyliquid64"]
 edition = "2018"
 repository = "https://github.com/twitchyliquid64/usbd-hid"
 
+[features]
+default = []
+std = ["serde/std", "ssmarhsal/std"]
+alloc = ["serde//alloc"]
 
 [dependencies]
 usbd-hid-macros = { path = "macros", version = "0.4.2" }
