--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "usbd-hid"
 description = "A HID class for use with usb-device."
-version = "0.4.2"
+version = "0.4.3"
 keywords = ["hid", "no-std", "usb-device"]
 license = "MIT OR Apache-2.0"
 authors = ["twitchyliquid64"]
@@ -11,10 +11,10 @@ repository = "https://github.com/twitchyliquid64/usbd-hid"
 [features]
 default = []
 std = ["serde/std", "ssmarhsal/std"]
-alloc = ["serde//alloc"]
+alloc = ["serde/alloc"]
 
 [dependencies]
 usbd-hid-macros = { path = "macros", version = "0.4.2" }
-usb-device = "0.2.1"
+usb-device = "0.2.5"
 serde = { version = "1.0", default-features = false }
 ssmarshal = { version = "1.0", default-features = false }
